# bunnify

./: .gitignore  CHROME_INTEGRATION_COMPLETE.txt  CHROME_SETUP.md  CONTRIBUTING.md  GITHUB_SETUP.md  LICENSE  LOGGING_IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  READY_FOR_GITHUB.md  SETUP_COMPLETE.md  bunnify-server  bunnify.json.example  manage.py  pyproject.toml  requirements.txt  start  test  test_bunnify
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: bunnify.yml  django.yml
bookmarks/: models.py  tests.py  urls.py  views.py
bookmarks/management/commands/: load_bookmarks.py  watch_bookmarks.py
bookmarks/migrations/: 0001_initial.py  0002_bookmark_defaults.py
bookmarks/templates/bookmarks/: base.html  browser_url.html  cmd.html  copilot_review.html  index.html  list.html  opensearch.xml
bunnify/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: get_copilot_review.sh  request_copilot_review.sh
