[project]
name = "bunnify"
version = "0.1.1"
description = "Smart bookmark manager and URL shortcut system"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0",
    "jsonschema>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pyright>=1.1.408",
]

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv", "venv", "migrations"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "basic"
exclude = ["**/migrations", "**/.venv", "**/venv"]
# Django has dynamic attributes and patterns that don't match strict typing
reportAttributeAccessIssue = "none"
reportIndexIssue = "none"
reportCallIssue = "none"
reportOptionalMemberAccess = "none"
reportArgumentType = "none"  # Django HttpResponse accepts str, pyright thinks bytes
